fix item detail spacing

--- a/src/components/ShoppingList/PopulatedList/PopulatedList.scss
+++ b/src/components/ShoppingList/PopulatedList/PopulatedList.scss
@@ -7,7 +7,6 @@
 }
 
 .itemCard {
-  border-bottom: solid 1px black;
   border-top: solid 1px black;
   padding: 10px;
   display: flex;
@@ -57,7 +56,7 @@
 
 .itemDetailsContainer {
   margin-left: 1em;
-  min-width: 30%;
+  min-width: 10em;
 }
 
 .countdownContainer {
